<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:gravity="center_horizontal"
              android:layout_height="fill_parent">

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
              android:text="@string/test_notice" android:gravity="center_horizontal"/>

    <Button android:id="@+id/btn_test_vibrate" android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/button_v_sep"
            android:enabled="false"
            android:layout_height="wrap_content" android:text="@string/test_vibrate"/>

    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                  android:layout_height="wrap_content" android:gravity="center_horizontal"
                  android:layout_marginTop="@dimen/button_v_sep">

        <Button android:id="@+id/btn_test_led_red" android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content" android:text="@string/test_led_red"/>

        <Button android:id="@+id/btn_test_led_green" android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content" android:text="@string/test_led_green"/>

        <Button android:id="@+id/btn_test_led_blue" android:layout_width="wrap_content"
                android:enabled="false"
                android:layout_height="wrap_content" android:text="@string/test_led_blue"/>
    </LinearLayout>

</LinearLayout>