<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="20dip"
                android:textStyle="bold"
                android:textColor="@color/white"
                />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:src="@drawable/inner_lv"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text_description"
                android:gravity="center"
                android:autoLink="web|email"
                android:textSize="16dip"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:textStyle="bold"
                android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:textStyle="bold"
            android:textSize="18dip"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            android:text="@string/proceed" />

        <Button
            android:id="@+id/btn_next_dev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dip"
            android:textStyle="bold"
            android:textSize="18dip"
            android:paddingLeft="40dip"
            android:paddingRight="40dip"
            android:text="@string/proceed_to_dev" />


    </LinearLayout>
</ScrollView>